cif/org.eclipse.escet.cif.tests/tests/plcgen/prechecker_event_controllability.cif.iec.err
ERROR: CIF PLC code generator failed due to unsatisfied preconditions:

  ------------------------------------------------------------------------------------
  (1/3) Edge has an explicit 'tau' event, which is not controllable or uncontrollable.
  ------------------------------------------------------------------------------------
   * In location "A.Y":
     - edge tau goto X;
            ^

  ------------------------------------------------------------------------------------
  (2/3) Edge has an implicit 'tau' event, which is not controllable or uncontrollable.
  ------------------------------------------------------------------------------------
   * In location "A.X":
     - edge when d = 7 goto Y;
       ^

  --------------------------------------------------------------
  (3/3) Event is not declared as controllable or uncontrollable.
  --------------------------------------------------------------
   * In the top-level scope of the specification:
     - event e;
             ^
